Fix bug with missing background colours on results links

--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -86,8 +86,6 @@
         position: absolute;
         top: 44px;
         left: 0px;
-        background: #333;
-        background: rgba(51, 51, 51, 0.8);
         color: #CCC;
         width: 100%;
         // Because input gets bigger on bigger screens, we need to move further
@@ -102,6 +100,8 @@
                     display: block;
                     border-bottom: 1px solid #333;
                     padding: 1em;
+                    background: #333;
+                    background: rgba(51, 51, 51, 0.75);
                 }
                 a:hover {
                     background: lighten(#333, 10%);
@@ -109,10 +109,12 @@
                     color: #FFF;
                 }
                 a.norse {
-                    background: url(../img/helmet_inverted.png) no-repeat 14px 5px;
+                    background: #333 url(../img/helmet_inverted.png) no-repeat 14px 5px;
+                    background: rgba(51, 51, 51, 0.75) url(../img/helmet_inverted.png) no-repeat 14px 5px;
                     padding-left: 60px;
                     &:hover {
-                        background-image: url(../img/helmet_inverted_hover.png);
+                        background: lighten(#333, 10%) url(../img/helmet_inverted_hover.png) no-repeat 14px 5px;
+                        background: rgba(51, 51, 51, 0.9) url(../img/helmet_inverted_hover.png) no-repeat 14px 5px;
                     }
                 }
                 &:last-child {
@@ -155,7 +157,7 @@
     a {
         color: #000;
         &:hover {
-            color: #c69261;            
+            color: #c69261;
             i.link-arrow{
                 background-color:#fff;
             }
@@ -168,7 +170,7 @@
         }
     }
 
-    p, ul, li {      
+    p, ul, li {
         color:#666;
     }
 
